# editor

./: .dockerignore  .eslintrc.cjs  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build-docker.yml  semantic-version.yml  validate.yml
backend/: Cargo.toml
backend/src/: main.rs
rules/: C.json  d.json  sample.json  test.json  the big one (copy).json  the big one.json  vvvvasf.json  xxx.json
src/: main.css  main.tsx
src/assets/: decision-templates.ts
src/components/: page-header.tsx  simulator.tsx
src/context/: theme.provider.tsx
src/helpers/: error-message.ts  graph.ts
src/pages/: decision-simple.module.css  decision-simple.tsx  not-found.tsx
