[package]
name = "editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
axum-macros = "0.4.0"
anyhow = "1.0.75"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-full", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
zen-engine = "0.21.0"